--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -26,7 +26,7 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome Completo:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome Completo:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome ?>
                                 </div>
@@ -38,13 +38,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Mãe:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Mãe:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome_mae ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data de Nascimento:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data de Nascimento:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_nasc ?>
                                 </div>
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Complemento: </label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Complemento: </label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->complemento ?>
                                 </div>
@@ -138,13 +138,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">UF:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> UF:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Cidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Cidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
@@ -172,15 +172,15 @@
                         <div class="span6">
                             <div class="control-group">
                                 <div class="control-group">
-                                    <label for="inputEmail" class="control-label">Matrícula:</label>
+                                    <label for="inputEmail" class="control-label"><b>*</b> Matrícula:</label>
                                     <div class="controls">
                                         <?php echo $this->form->Funcionario->matricula ?>
                                     </div>
                                 </div>
-                                <label for="inputEmail" class="control-label">Cargo:</label>
+<!--                                <label for="inputEmail" class="control-label">Cargo:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Funcionario->cod_cargo ?>
-                                </div>
+                                    <?php //echo $this->form->Funcionario->cod_cargo ?>
+                                </div>-->
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Função:</label>
