--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -170,10 +170,10 @@
                                         <?php echo $this->form->Funcionario->matricula ?>
                                     </div>
                                 </div>
-                                <label for="inputEmail" class="control-label">Cargo:</label>
+<!--                                <label for="inputEmail" class="control-label">Cargo:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Funcionario->cod_cargo ?>
-                                </div>
+                                    <?php //echo $this->form->Funcionario->cod_cargo ?>
+                                </div>-->
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Função:</label>
@@ -194,7 +194,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Status:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Status:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Status->cod_status ?>
                                 </div>
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Perfil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Perfil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_perfil ?>
                                 </div>
