Um monte de alteração.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -97,13 +97,13 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Endereço:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Endereço:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->endereco ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->numero ?>
                                 </div>
@@ -129,13 +129,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">UF:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> UF:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Cidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Cidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
@@ -163,7 +163,7 @@
                         <div class="span6">
                             <div class="control-group">
                                 <div class="control-group">
-                                    <label for="inputEmail" class="control-label"><b>*</b> Telefone residencial:</label>
+                                    <label for="inputEmail" class="control-label">Telefone residencial:</label>
                                     <div class="controls">
                                         <?php echo $this->form->telefone_residencial ?>
                                     </div>
@@ -181,13 +181,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Perfil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Perfil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_perfil ?>
                                 </div>
