--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -25,7 +25,7 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome Completo:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome Completo:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome ?>
                                 </div>
@@ -37,13 +37,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome da Mãe:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Nome da Mãe:</label>
                                 <div class="controls">
                                     <?php echo $this->form->nome_mae ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Data de Nascimento:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Data de Nascimento:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dt_nasc ?>
                                 </div>
@@ -70,13 +70,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Estado Civil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Estado Civil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_estado_civil ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Sexo:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Sexo:</label>
                                 <div class="controls">
                                     <?php echo $this->form->sexo ?>
                                 </div>
@@ -105,13 +105,13 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Endereço:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Endereço:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->endereco ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->numero ?>
                                 </div>
@@ -137,13 +137,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">UF:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> UF:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Cidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Cidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
@@ -176,7 +176,7 @@
                                         <?php echo $this->form->telefone_residencial ?>
                                     </div>
                                 </div>
-                                <label for="inputEmail" class="control-label">Telefone celular:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Telefone celular:</label>
                                 <div class="controls">
                                     <?php echo $this->form->telefone_celular ?>
                                 </div>
@@ -189,13 +189,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Perfil:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Perfil:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_perfil ?>
                                 </div>
@@ -209,19 +209,19 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Usuário:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Usuário:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->nome_login ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Senha:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Senha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->senha_login ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Confirmar-Senha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Login->senha_login ?>
                                 </div>
