--- a/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
+++ b/application/modules/admin/views/scripts/unidade/cadastro-unidade.phtml
@@ -51,13 +51,13 @@
                     <div class="rows-fluid"> 
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Endereço:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Endereço:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->endereco ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->numero ?>
                                 </div>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Telefone:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Telefone:</label>
                                 <div class="controls">
                                     <?php echo $this->form->num_tel?>
                                 </div>
@@ -89,13 +89,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">UF:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> UF:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Cidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Cidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
