--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -98,7 +98,7 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Tipo do Cartão:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Tipo do Cartão:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_tipo_cartao ?>
                                 </div>
@@ -110,13 +110,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Matricula:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Matricula:</label>
                                 <div class="controls">
                                     <?php echo $this->form->VacinaAplicada->matricula ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Campanha:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Campanha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->VacinaAplicada->cod_campanha ?>
                                 </div>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Tipo do Cartão:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Tipo do Cartão:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_tipo_cartao ?>
                                 </div>
