--- a/application/modules/admin/views/scripts/endereco/ajax-popula-cidade.phtml
+++ b/application/modules/admin/views/scripts/endereco/ajax-popula-cidade.phtml
@@ -1,5 +1,3 @@
 <select id="cod_id" name="cod_id">
-    <?php foreach($this->select as $value): ?>
-        <option value="<?php echo $value['value'] ?>"><?php echo $value['label'] ?></option>
-    <?php endforeach; ?>
+    <?php echo $this->select ?>
 </select>
