--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -101,13 +101,13 @@
                     <div class="rows-fluid">
                         <div class="span6">
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Endereço:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Endereço:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->endereco ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Número:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Número:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->numero ?>
                                 </div>
@@ -133,13 +133,13 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">UF:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> UF:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_uf ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Cidade:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Cidade:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Endereco->cod_cid ?>
                                 </div>
@@ -176,7 +176,7 @@
                                 </div>-->
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Função:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Função:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Funcionario->cod_funcao ?>
                                 </div>
