--- a/application/modules/admin/views/scripts/error/error.phtml
+++ b/application/modules/admin/views/scripts/error/error.phtml
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Zend Framework Default Application</title>
+  <title>Simova - Erro</title>
 </head>
 <body>
-  <h1>An error occurred</h1>
+  <h1>Houve um erro</h1>
   <h2><?php echo $this->message ?></h2>
 
   <?php if (isset($this->exception)): ?>
