--- a/application/modules/site/views/scripts/cartao/ver-cartao.phtml
+++ b/application/modules/site/views/scripts/cartao/ver-cartao.phtml
@@ -49,7 +49,7 @@
             <td style="background-color: #08c; color: #FFFFFF">Reforço</td>
 
         </tr>
-        <?php foreach ($this->cartaoVacina as $key => $columns): ?>
+        <?php foreach ($this->cartaoVacina ? : array() as $key => $columns): ?>
             <?php
             $i = 0;
             ?>
