--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -183,7 +183,7 @@
                                 </div>-->
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Função:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Função:</label>
                                 <div class="controls">
                                     <?php echo $this->form->Funcionario->cod_funcao ?>
                                 </div>
@@ -195,7 +195,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
+                                <label for="inputEmail" class="control-label"><b>*</b> Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
