--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -42,7 +42,7 @@ section #right{float:left;width:9px;height:44px}
 #topnav ul li ul li:hover{background:transparent}
 
 /* Onde aparece o banner da tela principal*/
-#newsSlider{border:1px solid #DDD;width:942px;height:240px;background-color:#FFF;margin-bottom:15px;padding:5px}
+#newsSlider{border:1px solid #DDD;width:942px;background-color:#FFF;margin-bottom:15px;padding:5px}
 
 
 /* Barra do banner da tela principal*/
@@ -145,13 +145,13 @@ footer a:hover,#blockend #footer_gray a:hover,#dock a:hover{text-decoration:unde
 
  /* Inicio - divisao dos box */
 .st_box {width: 466px; float: left; margin-right: 5px; overflow: hidden; background-color:#fff }
-.st_box_p {width: 450px; height: 240px; margin-bottom: auto; }
+.st_box_p {width: 450px; margin-bottom: auto; }
 .st_box  p { text-align:justify; }
 .st_box_contato {width: 540px; float: left; margin-right: 10px; overflow: hidden; background-color:#fff }
 .st_box_a_contato {width: 310px; float: left; margin-right:5px; overflow: hidden; background-color:#fff }
 .st_box_p_contato {width: 310px; max-height: 700px; margin-bottom: auto; border-left:1px solid #DDD; padding:0 5px; }
 .st_box_a {width: 228px; float: left; margin-right:5px; overflow: hidden; background-color:#fff }
-.st_box_pa {width: 230px; height: 240px; margin-bottom: auto; border-left:1px solid #DDD; padding:0 5px; }
+.st_box_pa {width: 230px; margin-bottom: auto; border-left:1px solid #DDD; padding:0 5px; }
 
 /* Inicio - Divisão de pagina */ 
 .estru .box{margin-left:10px;padding-left:15px;text-align:left;border-left:1px solid #DDD;min-width:150px;float:left}
