--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -325,6 +325,7 @@
 
                                 </ul>
                             </li>
+                            
                             <li>
                                 <a title="Cartão de Vacinas">
                                     <div class="helper-font-24">
@@ -343,6 +344,26 @@
                                     </li>
                                 </ul>
                             </li>
+                            <li>
+                                <a title="Calendario de Vacinas">
+                                    <div class="helper-font-24">
+
+                                    </div>
+                                    <span class="sidebar-text" style="font-size: 14px">Calendario de Vacinas</span>
+                                </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="/admin/calendario/cadastrar-calendario" title="Cadastrar calendario de Vacinas" class="corner-all">
+                                            <i class="icon-book"></i>&nbsp;
+                                            <span class="sidebar-text">Cadastrar</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+                            
                             <li>
                                 <a title="Campanhas">
                                     <div class="helper-font-24">
@@ -370,7 +391,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="icons.html" title="icons">
+                                <a  title="Mensagens">
                                     <div class="helper-font-24">
 
                                     </div>
@@ -395,14 +416,42 @@
 
                                 </ul>
                             </li>
+                            
+                            
                             <li>
-                                <a href="widgets.html" title="widgets">
+                                <a title="Emitir relatorios">
                                     <div class="helper-font-24">
 
                                     </div>
                                     <span class="sidebar-text" style="font-size: 14px">Emitir Relatórios</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="/admin/relatorio/vacina-aplicada" title="Relatorio das vacinas aplicadas" class="corner-all">
+                                            <i class="icon-info-sign"></i>&nbsp;
+                                            <span class="sidebar-text">Vacinas aplicadas</span>
+                                        </a>
+                                    </li>
+                                <!--   <li class="divider"></li>  -->
+                                    <li>
+                                        <a href="/admin/relatorio/vacina-aprazada" title="Relatorio das vacinas aprazadas" class="corner-all">
+                                            <i class="icon-info-sign"></i>&nbsp;
+                                            <span class="sidebar-text">Vacinas aprazadas</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/admin/relatorio/vacina-vencer" title="Relatorio das vacinas a vencer" class="corner-all">
+                                            <i class="icon-info-sign"></i>&nbsp;
+                                            <span class="sidebar-text">Vacinas a vencer</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
                             </li>
+                            
+                            
                             <li>
                                 <a title="Ferramentas">
                                     <div class="helper-font-24">
