--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -9,7 +9,7 @@ echo $this->flashMessenger();
     <select name="tipoConsulta" id="tipoConsulta">
         <option value="">--</option>
         <option value="nome">Nome</option>
-        <option value="nome">Registro Nascimento</option>
+        <option value="registro_nasc">Registro Nascimento</option>
         <option value="rg">RG</option>
         <option value="cpf">CPF</option>
         <option value="cod_sit">Situação do Cadastro</option>
