Correção do problema 3 relacionado a mensagem de alteração efetuada quando cancelado.

--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -233,7 +233,7 @@
                             <div class="form-actions">
                                 <div class="control-group">
                                     <button class="btn btn-primary" type="submit">Salvar</button>
-                                    <a href="/admin/pessoa/consulta-paciente" ><button class="btn btn-primary">Cancelar</button> </a>
+                                    <a href="/admin/pessoa/consulta-paciente" class="btn btn-primary">Cancelar</a>
                                 </div>
                             </div>
                         </div>
