--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -52,7 +52,7 @@ echo $this->flashMessenger();
                    <!-- <td><?php echo $paciente->cod_pac ?></td>-->
                     <td><?php echo $paciente->nome ?></td>
                     <td><?php echo $paciente->rg ?></td>
-                    <td><?php echo $paciente->rg ?></td>
+                    <td><?php echo $paciente->registro_nasc ?></td>
                     <td><?php echo $paciente->cpf ?></td>
                     <td>
                         <?php if ($paciente->cod_sit): ?>
