Correção layout site

--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label"><b>*</b> Campanha:</label>
+                                <label for="inputEmail" class="control-label">Campanha:</label>
                                 <div class="controls">
                                     <?php echo $this->form->VacinaAplicada->cod_campanha ?>
                                 </div>
