--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -103,14 +103,15 @@
                     
                 </section>
                 <!-- Inicio de Menus inferior --> 
-                <footer><div class="top"></div>
+                <footer style="height: 170px;">
+                    <div class="top"></div>
 
-                    <div class="box" style="border:none">
+                    <div class="box">
                         <h5>INSTITUCIONAL</h5>
                         <p><a href="/index/institucional">A Empresa </a></p>
                     </div>
 
-                    <div class="box" style="width:120px;">
+                    <div class="box">
                         <h5>SERVIÇOS</h5>
                         <p><a href="/index/consultar-vacinas">Consultar Vacinas </a></p>
                         <p><a href="/index/consultar-calendario">Consultar Calendário</a></p>
@@ -118,18 +119,18 @@
                         <p><a href="/index/consultar-legislacao">Consultar Legislação</a></p>
                     </div>
 
-                    <div class="box" style="width:120px;">
+                    <div class="box">
                         <h5>Utilidades</h5>
                         <p><a href="/index/duvidas">Dúvidas Frequentes</a></p>
                         <p><a href="/index/links-uteis">Links Úteis</a></p>
                     </div>
 
-                    <div class="box" style="width:120px;">
+                    <div class="box">
                         <h5>Campanhas</h5>
                         <p><a href="/index/campanhas">Campanhas</a></p>
                     </div>
 
-                    <div class="box" style="width:120px;">
+                    <div class="box">
                         <h5>CONTATO</h5>
                         <p><a href="/index/fale-conosco">Fale Conosco</a></p>
                     </div>
