Correções em login e estado

--- a/application/modules/admin/views/scripts/auth/login.phtml
+++ b/application/modules/admin/views/scripts/auth/login.phtml
@@ -64,7 +64,7 @@
         <div class="control-group">
             <label class="control-label"><b>Usuário:</b></label>
             <div class="controls">
-                <input name="email" value="" type="text" id="email" class="input-block-level" placeholder="Email">
+                <input name="email" value="" type="text" id="email" class="input-block-level" placeholder="Usuário">
             </div>
         </div>
         <div class="control-group">
