--- a/application/modules/admin/views/scripts/relatorio/vacina-aplicada.phtml
+++ b/application/modules/admin/views/scripts/relatorio/vacina-aplicada.phtml
@@ -79,7 +79,7 @@
                             <div class="span12">
                                 <div class="form-actions">
                                     <div class="control-group">
-                                        <a href="/admin/relatorio/visualiza-relatorio-aplicada"><button class="btn btn-primary" type="submit">Gerar relatório</button>jjjj</a>
+                                        <a href="/admin/relatorio/visualiza-relatorio-aplicada" class="btn btn-primary">Gerar relatório</a>
                                         <button class="btn btn-primary" type="reset">Limpar</button>
                                     </div>
                                 </div>
