--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -1,7 +1,7 @@
 /* 
     Document   : template
     Created on : 25/07/2012, 10:58:48
-    Author     : Bruno
+    Author     : Administrador
     Description:
         Purpose of the stylesheet follows.
 */
